--- a/views/client-list.ejs
+++ b/views/client-list.ejs
@@ -1,6 +1,7 @@
 <!-- views/client-list.ejs -->
 <!doctype html>
 <html lang="it">
+
 <head>
     <title>Portale Innovazioni - Lista clienti</title>
     <!--
@@ -20,118 +21,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <% include head %>
 </head>
+
 <body>
-<div class="sticky-top">
-    <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="row justify-content-md-center">
-            <div class="col-md-auto">
-                <a class="navbar-brand" href="#">Lista Clienti</a>
-            </div>
-            <div class="col-md-auto">
-                <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
-                    <div class="col-md-auto">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                                   data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false">
-                                    Azioni
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                                    <li><a class="dropdown-item" href="/home">Home</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-auto">
-                        <form action="/client-list" method="post" class="form-inline">
-                            <div class="form-row align-items-center">
-                                <div class="col-md-auto">
-                                    <label class="sr-only" for="inlineFormCodCli">Codice cliente</label>
-                                    <input type="text" name="ccod" class="form-control mb-2" id="inlineFormInputCodCli"
-                                           placeholder="Codice cliente">
-                                </div>
-                                <div class="col-md-auto">
-                                    <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
-                                    <input type="text" name="xragsoc" class="form-control mb-2"
-                                           id="inlineFormInputRagSoc"
-                                           placeholder="Ragione sociale">
-                                </div>
-                                <div class="col-md-auto">
-                                    <button type="submit" class="btn btn-primary mb-2">Cerca</button>
-                                </div>
-                            </div>
-                        </form>
+    <div class="sticky-top">
+        <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    <a class="navbar-brand" href="#">Lista Clienti</a>
+                </div>
+                <div class="col-md-auto">
+                    <button class="btn-primary bg-transparent text-primary border-0 align-bottom" type="button"
+                        data-toggle="collapse" data-target="#filterForm" aria-expanded="false" aria-controls="filterForm">
+                        <i class="material-icons">&#xe152</i>
+                    </button>
+                </div>
+                <div class="col-md-auto">
+                    <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                        <div class="col-md-auto">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Azioni
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                        <li><a class="dropdown-item" href="/home">Home</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
-</div>
-<div class="container-fluid">
-    <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
-        <div id="client">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">Codice Cliente<a href="/new-client?newOrder=n" role="button"
-                                                     class="btn-primary bg-transparent mr-auto mb-2 text-primary border-0 align-bottom"><i
-                                    class="material-icons">&#xe05e</i></a></th>
-                    </th>
-                    <th scope="col">Ragione sociale</th>
-                    <th scope="col">Indirizzo</th>
-                    <th scope="col">N° Telefono</th>
-                    <th scope="col">Agente</th>
-                    <th></th>
-                    <th></th>
-                    <% if (user.cage === 9999 || user.cage == 0) { %>
-                    <th></th>
-                    <th></th>
-                    <% } %>
-                </tr>
-                </thead>
-                <tbody>
-                <% clients.forEach(function(client) { %>
-                <% if (client.cage == user.cage || user.cage == 0 || user.cage == 9999) {%>
-                <tr>
-                    <th scope="row"><%= client.ccod %></th>
-                    <td><%= client.xragsoc %></td>
-                    <td><%= client.xind %></td>
-                    <td><%= client.ntel %></td>
-                    <td><%= client.cage %></td>
-                    <td>
-                        <form action="/detail-client" method="get">
-                            <input type="hidden" name="ccod" value="<%= client.ccod %>">
-                            <button type="submit" class="btn btn-link"><i class="material-icons">&#xe88f</i></button>
-                        </form>
-                    </td>
-                    <td>
-                        <form action="/edit-client" method="get">
-                            <input type="hidden" name="ccod" value="<%= client.ccod %>">
-                            <button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
-                        </form>
-                    </td>
-                    <% if (user.cage === 9999 || user.cage == 0) { %>
-                    <td>
-                        <form action="/get-csv-client" method="get">
-                            <input type="hidden" name="ccod" value="<%= client.ccod %>">
-                            <button type="submit" class="btn btn-link"><i class="material-icons">&#xe2c4</i></button>
-                        </form>
-                    </td>
-                    <td>
-                        <form action="/delete-client" method="post">
-                            <input type="hidden" name="ccod" value="<%= client.ccod %>">
-                            <button type="submit" class="btn btn-link"><i class="material-icons">&#xe872</i></button>
-                        </form>
-                    </td>
-                    <% } %>
-                </tr>
-                <% } %>
-                <% }); %>
-                </tbody>
-            </table>
+            <div class="row justify-content-md-center">
+                <div class="collapse" id="filterForm">
+                    <form action="/client-list" method="post" class="form-inline">
+                        <div class="form-row align-items-center">
+                            <div class="col-md-auto">
+                                <label class="sr-only" for="inlineFormCodCli">Codice cliente</label>
+                                <input type="text" name="ccod" class="form-control mb-2" id="inlineFormInputCodCli"
+                                    placeholder="Codice cliente">
+                            </div>
+                            <div class="col-md-auto">
+                                <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
+                                <input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
+                                    placeholder="Ragione sociale">
+                            </div>
+                            <div class="col-md-auto">
+                                <button type="submit" class="btn btn-primary mb-2">Cerca</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container-fluid">
+        <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
+            <div id="client">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Codice Cliente<a href="/new-client?newOrder=n" role="button" class="btn-primary bg-transparent mr-auto mb-2 text-primary border-0 align-bottom"><i
+                                        class="material-icons">&#xe05e</i></a></th>
+                            </th>
+                            <th scope="col">Ragione sociale</th>
+                            <th scope="col">Indirizzo</th>
+                            <th scope="col">N° Telefono</th>
+                            <th scope="col">Agente</th>
+                            <th></th>
+                            <th></th>
+                            <% if (user.cage === 9999 || user.cage == 0) { %>
+                            <th></th>
+                            <th></th>
+                            <% } %>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% clients.forEach(function(client) { %>
+                        <% if (client.cage == user.cage || user.cage == 0 || user.cage == 9999) {%>
+                        <tr>
+                            <th scope="row">
+                                <%= client.ccod %>
+                            </th>
+                            <td>
+                                <%= client.xragsoc %>
+                            </td>
+                            <td>
+                                <%= client.xind %>
+                            </td>
+                            <td>
+                                <%= client.ntel %>
+                            </td>
+                            <td>
+                                <%= client.cage %>
+                            </td>
+                            <td>
+                                <form action="/detail-client" method="get">
+                                    <input type="hidden" name="ccod" value="<%= client.ccod %>">
+                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe88f</i></button>
+                                </form>
+                            </td>
+                            <td>
+                                <form action="/edit-client" method="get">
+                                    <input type="hidden" name="ccod" value="<%= client.ccod %>">
+                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
+                                </form>
+                            </td>
+                            <% if (user.cage === 9999 || user.cage == 0) { %>
+                            <td>
+                                <form action="/get-csv-client" method="get">
+                                    <input type="hidden" name="ccod" value="<%= client.ccod %>">
+                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe2c4</i></button>
+                                </form>
+                            </td>
+                            <td>
+                                <form action="/delete-client" method="post">
+                                    <input type="hidden" name="ccod" value="<%= client.ccod %>">
+                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe872</i></button>
+                                </form>
+                            </td>
+                            <% } %>
+                        </tr>
+                        <% } %>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
