fix navigation bar and filters area

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -43,7 +43,7 @@
 								<li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
 								<li><a class="dropdown-item" href="/new-order-cond-pag">Condizioni di Pagamento</a></li>
 								<div class="dropdown-divider"></div>
-								<li><a class="dropdown-item" href="/home">Annulla</a></li>
+								<li><a class="dropdown-item" href="/order-list">Annulla</a></li>
 							</ul>
 						</li>
 					</ul>
