--- a/views/new-order-campioncini.ejs
+++ b/views/new-order-campioncini.ejs
@@ -34,7 +34,7 @@
                                     <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
                                     <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
                                     <div class="dropdown-divider"></div>
-                                    <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                                    <li><a class="dropdown-item" href="/order-list">Annulla</a></li>
                                 </ul>
                             </li>
                         </ul>
