--- a/views/new-order-cond-pag.ejs
+++ b/views/new-order-cond-pag.ejs
@@ -42,7 +42,7 @@
                                 <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
                                 <li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
                                 <div class="dropdown-divider"></div>
-                                <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                                <li><a class="dropdown-item" href="/order-list">Annulla</a></li>
                             </ul>
                         </li>
                     </ul>
