--- a/views/new-order-promo.ejs
+++ b/views/new-order-promo.ejs
@@ -43,7 +43,7 @@
                                 <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
                                 <li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
                                 <div class="dropdown-divider"></div>
-                                <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                                <li><a class="dropdown-item" href="/order-list">Annulla</a></li>
                             </ul>
                         </li>
                     </ul>
