--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="row justify-content-md-center">
-                <div class="col-md-auto">
+                <div class="collapse" id="filterForm">
                     <form action="/product-list" method="get" class="form">
                         <div class="form-row align-items-center">
                             <div class="col-md-auto">
